--- a/todo.txt
+++ b/todo.txt
@@ -9,10 +9,6 @@
 - Create an Icon for the .dem files
 - Create a logo for the language
 - Create a website for the language
-- Create a proper README.md file
-- Create a proper LICENSE file
-- Create a proper CONTRIBUTING.md file
-- Upload to GitHub
 
 - Add support for importing modules
 - Add support for importing files
@@ -25,9 +21,7 @@
 
 ------------------ FIX -------------------
 
-- Printing objects doesn't show any of the object's properties
 - Printing functions doesn't show the AST of the function
-- (stdlib.time) sleep() doesn't work
 
 ------------------ FIX -------------------
 
@@ -46,6 +40,14 @@
 - Add support for comparison operators (ie <, >, <=, >=, ==, !=)
 
 - Added syntax highlighting via Demi-SyntaxHighlighting extension (VSCode)
+
+- (FIX) Printing objects doesn't show any of the object's properties
+- (FIX) (stdlib.time) sleep() doesn't work (Moved to a .dem file working (just need to implement modules & imports))
+
+- Create a proper README.md file
+- Create a proper LICENSE file
+- Create a proper CONTRIBUTING.md file
+- Upload to GitHub
 
 ------------------ DONE ------------------
 
