--- a/todo.txt
+++ b/todo.txt
@@ -18,7 +18,7 @@
 
 ----------------- WORKING ----------------
 
-- Create a website for the language
+
 
 ----------------- WORKING ----------------
 
@@ -27,6 +27,14 @@
 ------------------ FIX -------------------
 
 - Printing functions doesn't show the AST of the function
+    - Update: Printing functions shouldn't show the AST, but a tree that describes the function
+    examples:
+        {
+            kind: "Function",
+            identifier: "Function Name",
+            params: ["params"],
+            return: "Return variable"
+        }
 
 ------------------ FIX -------------------
 
@@ -58,6 +66,8 @@
 - Upload to GitHub
 
 - Create a logo for the language
+
+- Create a website for the language (Always updating (see todo on website github))
 
 ------------------ DONE ------------------
 
