Added helpers (logger) + Error messages + line numbers & columns

--- a/todo.txt
+++ b/todo.txt
@@ -18,7 +18,8 @@
 
 ----------------- WORKING ----------------
 
-
+- Working on error handling and beautiful error messages
+    (Always updating)
 
 ----------------- WORKING ----------------
 
