Added support for escape characters

--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,10 @@
 ------------------ TODO ------------------
 
 - Add support for boolean operators (ie &&, ||, !) (combines comparison statements)
+- Add support for escape characters in strings:
+    \n, \r\n, more
+
+- Add support for string interpolation.
 
 - Add array methods (Variables with type ArrayVal will have callable methods)
     - EG: `let i = [1, 2]; i.push(3);`
