feat: implement boolean operators
- Added support for AND (&&), OR (||), and NOT (!) operators
- Implemented boolean operations in function calls
- Added support for complex nested boolean expressions
- Updated parser to handle logical expressions
- Added comparison operator combinations with boolean logic

--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,5 @@
 ------------------ TODO ------------------
 
-- Add support for boolean operators (ie &&, ||, !) (combines comparison statements)
-
 - Add support for string interpolation.
 
 - Fix objects (Required)
@@ -90,6 +88,9 @@
             params: ["params"],
             return: "Return variable"
         }
+
+- Add support for boolean operators (ie &&, ||, !) (combines comparison statements)
+    Support for (&& + || + !) seems to be working.
 
 ------------------ DONE ------------------
 
