refactor(examples): reorganize example files
- Create category-specific directories
- Move examples to appropriate categories:
  - basics: hello world, one liners
  - loops: for, while
  - functions: basic, nested, printing
  - numbers: floats, negative, random
  - strings: templates, escape chars
  - errors: runtime, assertions
  - statements: if statements
  - objects: arrays

Improve organization for better discoverability

--- a/todo.txt
+++ b/todo.txt
@@ -13,10 +13,6 @@
 
 ----------------- WORKING ----------------
 
-- Add support for string interpolation.
-[/] - Setting variables with interpolated strings are working
-[X] - Using interpolated strings within function calls.
-
 - Array features eg:
     - Selecting array elements [/]
     - Add array methods (Variables with type ArrayVal will have callable methods)
@@ -93,6 +89,10 @@
 
 - Add support for boolean operators (ie &&, ||, !) (combines comparison statements)
     Support for (&& + || + !) seems to be working.
+
+- Add support for string interpolation.
+[/] - Setting variables with interpolated strings are working
+[/] - Using interpolated strings within function calls.
 
 ------------------ DONE ------------------
 
